Format pass with updated prettier config

--- a/libs/pages/public/src/lib/games/modules/ark-pf/ark-pf.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark-pf/ark-pf.component.html
@@ -1,7 +1,9 @@
 <div class="column12">
   <supremegaming-sub-header>
     <div class="left-content">
-      <a [routerLink]="['./']" routerLinkActive="active-sub-menu" [routerLinkActiveOptions]="{exact: true}">Ark: Primal Fear</a>
+      <a [routerLink]="['./']" routerLinkActive="active-sub-menu" [routerLinkActiveOptions]="{exact: true}"
+        >Ark: Primal Fear</a
+      >
       <a [routerLink]="['rules']" routerLinkActive="active-sub-menu">Rules</a>
       <a [routerLink]="['settings']" routerLinkActive="active-sub-menu">Settings</a>
       <a [routerLink]="['players-and-tribes']" routerLinkActive="active-sub-menu">Players &amp; Tribes</a>
