--- a/libs/ui/src/lib/modules/skeleton/components/header-item/header-item.component.html
+++ b/libs/ui/src/lib/modules/skeleton/components/header-item/header-item.component.html
@@ -1,5 +1,7 @@
 <div class="dropdown">
-  <a [routerLink]="['/community']" routerLinkActive="router-link-active">Community <span class="material-icons">keyboard_arrow_down</span></a>
+  <a [routerLink]="['/community']" routerLinkActive="router-link-active"
+    >Community <span class="material-icons">keyboard_arrow_down</span></a
+  >
   <div class="sub-menu">
     <ul>
       <li class="descriptive-menu-item">
