--- a/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
+++ b/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
@@ -8,7 +8,9 @@
     <nav class="module-navigation">
       <ul>
         <li class="dropdown">
-          <a [routerLink]="['/community']" routerLinkActive="router-link-active">Community <span class="material-icons">keyboard_arrow_down</span></a>
+          <a [routerLink]="['/community']" routerLinkActive="router-link-active"
+            >Community <span class="material-icons">keyboard_arrow_down</span></a
+          >
           <div class="sub-menu">
             <ul>
               <li class="descriptive-menu-item">
@@ -40,7 +42,9 @@
         </li>
 
         <li class="dropdown">
-          <a [routerLink]="['/games']" routerLinkActive="router-link-active">Games <span class="material-icons">keyboard_arrow_down</span></a>
+          <a [routerLink]="['/games']" routerLinkActive="router-link-active"
+            >Games <span class="material-icons">keyboard_arrow_down</span></a
+          >
           <div class="sub-menu">
             <ul>
               <li class="descriptive-menu-item">
@@ -190,7 +194,9 @@
         </li>
 
         <li class="dropdown">
-          <a [routerLink]="['/donate']" routerLinkActive="router-link-active">Donate <span class="material-icons">keyboard_arrow_down</span></a>
+          <a [routerLink]="['/donate']" routerLinkActive="router-link-active"
+            >Donate <span class="material-icons">keyboard_arrow_down</span></a
+          >
           <div class="sub-menu">
             <ul>
               <li class="descriptive-menu-item">
