--- a/libs/pages/public/src/lib/community/modules/community-support/community-support.component.html
+++ b/libs/pages/public/src/lib/community/modules/community-support/community-support.component.html
@@ -1,1 +1,3 @@
-<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Community/support.md"></supremegaming-content-fragment>
+<supremegaming-content-fragment
+  url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Community/support.md"
+></supremegaming-content-fragment>
