--- a/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-settings/ark-pf-settings.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-settings/ark-pf-settings.component.html
@@ -1,1 +1,3 @@
-<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Ark/PrimalFear/settings.md"></supremegaming-content-fragment>
+<supremegaming-content-fragment
+  url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Ark/PrimalFear/settings.md"
+></supremegaming-content-fragment>
