--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-plugins/ark-plugins.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-plugins/ark-plugins.component.html
@@ -1,1 +1,3 @@
-<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Ark/PVE/plugins.md"></supremegaming-content-fragment>
+<supremegaming-content-fragment
+  url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Ark/PVE/plugins.md"
+></supremegaming-content-fragment>
