--- a/libs/pages/public/src/lib/games/modules/atlas/modules/atlas-rules/atlas-rules.component.html
+++ b/libs/pages/public/src/lib/games/modules/atlas/modules/atlas-rules/atlas-rules.component.html
@@ -1,1 +1,3 @@
-<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Atlas/rules.md"></supremegaming-content-fragment>
+<supremegaming-content-fragment
+  url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Atlas/rules.md"
+></supremegaming-content-fragment>
