Added working ark supply drops compoonents

--- a/libs/ui/src/lib/modules/ark-loot-table/components/ark-loot-table/ark-loot-table.component.html
+++ b/libs/ui/src/lib/modules/ark-loot-table/components/ark-loot-table/ark-loot-table.component.html
@@ -1,1 +1,1 @@
-<pre>{{drops | async | json}}</pre>
+<supremegaming-ark-loot-crate *ngFor="let crate of mappedCrates | async" [crate]="crate"></supremegaming-ark-loot-crate>
