--- a/libs/ui/src/lib/modules/ark-loot-table/components/ark-loot-crate/ark-loot-crate.component.scss
+++ b/libs/ui/src/lib/modules/ark-loot-table/components/ark-loot-crate/ark-loot-crate.component.scss
@@ -1,3 +1,6 @@
+@import 'libs/scss/colors';
+@import 'libs/scss/mixins';
+
 :host {
   margin-bottom: 2rem;
   display: block;
@@ -19,6 +22,11 @@ table {
   tbody {
     tr {
       border: 1px solid #fafafa;
+      @include transition(background 0.3s);
+
+      &:hover {
+        background: $base_lightened;
+      }
     }
   }
 }
