--- a/libs/ui/src/lib/modules/ark-loot-table/components/ark-loot-table/ark-loot-table.component.html
+++ b/libs/ui/src/lib/modules/ark-loot-table/components/ark-loot-table/ark-loot-table.component.html
@@ -1,1 +1,19 @@
-<supremegaming-ark-loot-crate *ngFor="let crate of mappedCrates | async" [crate]="crate"></supremegaming-ark-loot-crate>
+<form [formGroup]="form">
+  <div class="search-container">
+    <input formControlName="search" type="text" placeholder="Begin typing to search for item" autofocus />
+  </div>
+</form>
+
+<ng-container *ngIf="(mappedCrates | async) as crates; else goSpin">
+  <ng-container *ngIf="crates.length > 0; else noResults">
+    <supremegaming-ark-loot-crate *ngFor="let crate of crates" [crate]="crate"></supremegaming-ark-loot-crate>
+  </ng-container>
+
+  <ng-template #noResults>
+    <p>Found nothing, chief!</p>
+  </ng-template>
+</ng-container>
+
+<ng-template #goSpin>
+  <p><em>Crunching numbers...</em></p>
+</ng-template>
