--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-supply-drops/ark-supply-drops.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-supply-drops/ark-supply-drops.component.html
@@ -1,6 +1,6 @@
-<h1 class="trailer-1">Custom Supply Drop Table</h1>
+<h1>Custom Supply Drop Table</h1>
 
-<p class="trailer-3">
+<p class="trailer-2">
   On your mark. Get set. Go! This table is not plug-n-play mod that all other servers use, but instead a table defined from
   the ground up that is unique to SupremeArk and SupremeArk alone. The purpose of it is to redefine drop hunting by making
   them worth hunting. This applies to all drops: surface, cave, and deep sea. In these you will find armors and weapons of
