Updated blockquote styles
Font size increase only applies to paragraph elements inside a block quote

--- a/apps/supremegaming-angular/src/styles.scss
+++ b/apps/supremegaming-angular/src/styles.scss
@@ -112,8 +112,11 @@ blockquote {
   padding-left: 0.75rem;
   margin-left: 0.25rem;
   display: block;
-  font-size: 1.1rem;
   font-style: italic;
+
+  p {
+    font-size: 1.1rem;
+  }
 }
 
 section.root {
