--- a/libs/ui/src/lib/modules/servers/components/server-grid-tile-overview/server-grid-tile-overview.component.html
+++ b/libs/ui/src/lib/modules/servers/components/server-grid-tile-overview/server-grid-tile-overview.component.html
@@ -1,11 +1,11 @@
 <div
   class="grid-background"
   *ngIf="columnIndex !== undefined && rowIndex !== undefined"
-  [ngStyle]="{backgroundImage: 'url(assets/images/atlas-grid/CellImg_' + columnIndex + '-' +  rowIndex + '.jpg)'}"
+  [ngStyle]="{backgroundImage: backgroundImageUrl | async}"
 ></div>
 
 <div class="status-container">
-  <p class="server-name">{{server.map_name}}</p>
+  <p class="server-name"><a [href]="baseAssetUrl | async" target="_blank">{{server.map_name}}</a></p>
 
   <div [ngSwitch]="status | async">
     <div *ngSwitchCase="'online'"><span title="Server is online" class="status-dot online"></span></div>
