--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/servers-online-player-list/servers-online-player-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/servers-online-player-list/servers-online-player-list.component.html
@@ -3,10 +3,10 @@
     <thead>
       <tr>
         <th></th>
-        <th>Character Name</th>
+        <th>{{characterColumnLabel}}</th>
         <th>Level</th>
-        <th>Tribe</th>
-        <th>Map</th>
+        <th>{{groupColumnLabel}}</th>
+        <th>{{mapColumnLabel}}</th>
       </tr>
     </thead>
 
