--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/ark-players-and-tribes.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/ark-players-and-tribes.component.html
@@ -1,3 +1,3 @@
 <h1>Player and Tribe Explorer</h1>
 
-<supremegaming-servers-online-player-list [servers]="servers | async"></supremegaming-servers-online-player-list>
+<router-outlet></router-outlet>
