Added players and tribes online, survivors, and tribes routing
Renamed a bunch of components to avoid confusing with page modules and UI component modules

--- a/apps/supremegaming-angular/src/styles.scss
+++ b/apps/supremegaming-angular/src/styles.scss
@@ -5,6 +5,7 @@
 @import 'libs/scss/spacing';
 @import 'libs/scss/colors';
 
+@import 'libs/scss/modules/tabs';
 // GLobal styles
 html {
   font-family: 'Public Sans', sans-serif;
