--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/ark-players-and-tribes.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/ark-players-and-tribes.component.html
@@ -1,3 +1,11 @@
 <h1>Player and Tribe Explorer</h1>
 
+<div class="tabs leader-2 trailer-3">
+  <div class="tab" [routerLink]="['./']" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}">
+    Online Players
+  </div>
+  <div class="tab" [routerLink]="['./survivors']" [routerLinkActive]="'active'">Survivors</div>
+  <div class="tab" [routerLink]="['./tribes']" [routerLinkActive]="'active'">Tribes</div>
+</div>
+
 <router-outlet></router-outlet>
