Added ark survivors search component
Refactored a players list table since it was essentially used in two places: online players and player list

--- a/apps/supremegaming-angular/src/styles.scss
+++ b/apps/supremegaming-angular/src/styles.scss
@@ -6,6 +6,9 @@
 @import 'libs/scss/colors';
 
 @import 'libs/scss/modules/tabs';
+@import 'libs/scss/modules/search';
+@import 'libs/scss/modules/tables';
+
 // GLobal styles
 html {
   font-family: 'Public Sans', sans-serif;
