--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-online-list/ark-online-list.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-online-list/ark-online-list.component.html
@@ -1,6 +1,1 @@
-<supremegaming-online-player-list
-  [servers]="servers | async"
-  groupColumnLabel="Tribe Name"
-  characterColumnLabel="Survivor Name"
-  mapColumnLabel="Map"
-></supremegaming-online-player-list>
+<supremegaming-online-player-list [servers]="servers | async"></supremegaming-online-player-list>
