--- a/libs/ui/src/lib/modules/ark-loot-table/components/ark-loot-table/ark-loot-table.component.html
+++ b/libs/ui/src/lib/modules/ark-loot-table/components/ark-loot-table/ark-loot-table.component.html
@@ -10,10 +10,14 @@
   </ng-container>
 
   <ng-template #noResults>
-    <p>Found nothing, chief!</p>
+    <div class="search-feedback">
+      <p>There's nothing here Jim...</p>
+    </div>
   </ng-template>
 </ng-container>
 
 <ng-template #goSpin>
-  <p><em>Crunching numbers...</em></p>
+  <div class="search-feedback">
+    <p>Crunching numbers....</p>
+  </div>
 </ng-template>
