--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/player-search-list/player-search-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/player-search-list/player-search-list.component.html
@@ -1,1 +1,18 @@
-<p>player-search-list works!</p>
+<form [formGroup]="form">
+  <div class="search-container">
+    <input formControlName="search" type="text" [placeholder]="placeholder" autofocus />
+  </div>
+</form>
+
+<ng-container *ngIf="(players | async)?.length > 0">
+  <supremegaming-player-table
+    [players]="(players | async)"
+    [columnsVisible]="['CharacterName', 'Level', 'TribeName', 'PlayMap', 'FileUpdated']"
+    [columnLabels]="['Survivor Name', 'Level', 'Tribe Name', 'Map', 'Last Online']"
+    [showCount]="true"
+  ></supremegaming-player-table>
+</ng-container>
+
+<div class="search-feedback">
+  <p *ngIf="(searchTerm | async)?.length > 0 && (players | async)?.length === 0">There's nothing here Jim...</p>
+</div>
