Added tribe list component
Implemented on ark tribes section

--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-tribes-list/ark-tribes-list.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-tribes-list/ark-tribes-list.component.html
@@ -1,1 +1,4 @@
-<p>ark-tribe-search works!</p>
+<supremegaming-tribe-search-list
+  game="ark"
+  placeholder="Type to search Ark tribes by name, tribe id, etc."
+></supremegaming-tribe-search-list>
