Refactored search list components
Added a base abstract class for both player and tribe components to reduce duplicate code

--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/player-search-list/player-search-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/player-search-list/player-search-list.component.html
@@ -4,14 +4,14 @@
   </div>
 </form>
 
-<ng-container *ngIf="(players | async)?.length > 0">
+<ng-container *ngIf="(data | async)?.length > 0">
   <supremegaming-player-table
-    [players]="(players | async)"
+    [players]="(data | async)"
     [columnsVisible]="['CharacterName', 'Level', 'TribeName', 'PlayMap', 'FileUpdated']"
     [columnLabels]="['Survivor Name', 'Level', 'Tribe Name', 'Map', 'Last Online']"
   ></supremegaming-player-table>
 </ng-container>
 
 <div class="search-feedback">
-  <p *ngIf="(searchTerm | async)?.length > 0 && (players | async)?.length === 0">There's nothing here Jim...</p>
+  <p *ngIf="(searchTerm | async)?.length > 0 && (data | async)?.length === 0">There's nothing here Jim...</p>
 </div>
