--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-search-list/tribe-search-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-search-list/tribe-search-list.component.html
@@ -4,14 +4,14 @@
   </div>
 </form>
 
-<ng-container *ngIf="(tribes | async)?.length > 0">
+<ng-container *ngIf="(data | async)?.length > 0">
   <supremegaming-tribe-table
-    [tribes]="(tribes | async)"
+    [tribes]="(data | async)"
     [columnsVisible]="['Name', 'MemberCount', 'PlayMap']"
     [columnLabels]="['Tribe Name', 'Members', 'Map']"
   ></supremegaming-tribe-table>
 </ng-container>
 
 <div class="search-feedback">
-  <p *ngIf="(searchTerm | async)?.length > 0 && (tribes | async)?.length === 0">There's nothing here Jim...</p>
+  <p *ngIf="(searchTerm | async)?.length > 0 && (data | async)?.length === 0">There's nothing here Jim...</p>
 </div>
