Refactored player and tribe tables
Condensed shared properties into an abstract class to reduce duplicate code

--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/online-player-list/online-player-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/online-player-list/online-player-list.component.html
@@ -1,5 +1,5 @@
 <supremegaming-player-table
-  [players]="players | async"
+  [data]="players | async"
   [columnsVisible]="['CharacterName', 'Level', 'TribeName', 'PlayMap']"
   [columnLabels]="['Survivor Name', 'Level', 'Tribe Name', 'Map']"
   [showCount]="true"
