--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-search-list/tribe-search-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-search-list/tribe-search-list.component.html
@@ -6,7 +6,7 @@
 
 <ng-container *ngIf="(data | async)?.length > 0">
   <supremegaming-tribe-table
-    [tribes]="(data | async)"
+    [data]="(data | async)"
     [columnsVisible]="['Name', 'MemberCount', 'PlayMap']"
     [columnLabels]="['Tribe Name', 'Members', 'Map']"
   ></supremegaming-tribe-table>
