--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-table/tribe-table.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-table/tribe-table.component.html
@@ -7,7 +7,7 @@
   </thead>
 
   <tbody>
-    <tr *ngFor="let tribe of tribes; let i = index;">
+    <tr *ngFor="let tribe of data; let i = index;">
       <td *ngIf="showCount"><span class="character-count">{{i + 1}}.</span></td>
 
       <td class="name-and-avatar" *ngIf="columnsVisible | includes : 'Name'">
