--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/player-table/player-table.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/player-table/player-table.component.html
@@ -7,7 +7,7 @@
   </thead>
 
   <tbody>
-    <tr *ngFor="let player of players; let i = index;">
+    <tr *ngFor="let player of data; let i = index;">
       <td *ngIf="showCount"><span class="character-count">{{i + 1}}.</span></td>
 
       <td class="name-and-avatar" *ngIf="columnsVisible | includes : 'CharacterName'">
