Added base ark player and tribe details routes
Added ability for player and tribe explorer common sub components to accept router link paths down the component tree

--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-online-list/ark-online-list.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-online-list/ark-online-list.component.html
@@ -1,1 +1,5 @@
-<supremegaming-online-player-list [servers]="servers | async"></supremegaming-online-player-list>
+<supremegaming-online-player-list
+  [servers]="servers | async"
+  [playerDetailsRoute]="'./survivors'"
+  [tribeDetailsRoute]="'./tribes'"
+></supremegaming-online-player-list>
