--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-tribes-list/ark-tribes-list.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-tribes-list/ark-tribes-list.component.html
@@ -1,4 +1,6 @@
 <supremegaming-tribe-search-list
   game="ark"
   placeholder="Type to search Ark tribes by name, tribe id, etc."
+  [playerDetailsRoute]="'../survivors'"
+  [tribeDetailsRoute]="'./'"
 ></supremegaming-tribe-search-list>
