--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/online-player-list/online-player-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/online-player-list/online-player-list.component.html
@@ -2,5 +2,6 @@
   [data]="players | async"
   [columnsVisible]="['CharacterName', 'Level', 'TribeName', 'PlayMap']"
   [columnLabels]="['Survivor Name', 'Level', 'Tribe Name', 'Map']"
-  [showCount]="true"
+  [playerDetailsRoute]="playerDetailsRoute"
+  [tribeDetailsRoute]="tribeDetailsRoute"
 ></supremegaming-player-table>
