--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/player-search-list/player-search-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/player-search-list/player-search-list.component.html
@@ -9,6 +9,8 @@
     [data]="(data | async)"
     [columnsVisible]="['CharacterName', 'Level', 'TribeName', 'PlayMap', 'FileUpdated']"
     [columnLabels]="['Survivor Name', 'Level', 'Tribe Name', 'Map', 'Last Online']"
+    [playerDetailsRoute]="playerDetailsRoute"
+    [tribeDetailsRoute]="tribeDetailsRoute"
   ></supremegaming-player-table>
 </ng-container>
 
