--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-search-list/tribe-search-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-search-list/tribe-search-list.component.html
@@ -9,6 +9,8 @@
     [data]="(data | async)"
     [columnsVisible]="['Name', 'MemberCount', 'PlayMap']"
     [columnLabels]="['Tribe Name', 'Members', 'Map']"
+    [playerDetailsRoute]="playerDetailsRoute"
+    [tribeDetailsRoute]="tribeDetailsRoute"
   ></supremegaming-tribe-table>
 </ng-container>
 
