--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-players-list/ark-players-list.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-players-list/ark-players-list.component.html
@@ -1,4 +1,6 @@
 <supremegaming-player-search-list
   game="ark"
   placeholder="Type to search Ark players by character name, steam name, steam id, player id, etc."
+  [playerDetailsRoute]="'./'"
+  [tribeDetailsRoute]="'../tribes'"
 ></supremegaming-player-search-list>
