Added working player details component and base tribe details component

--- a/apps/supremegaming-angular/src/styles.scss
+++ b/apps/supremegaming-angular/src/styles.scss
@@ -221,3 +221,9 @@ section.root {
     transform: rotate(360deg);
   }
 }
+
+.wire-container {
+  padding: 1.25rem 1.5rem;
+  border: 1pt solid $base_lightened;
+  border-radius: 5pt;
+}
