--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-player-details/ark-player-details.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-player-details/ark-player-details.component.html
@@ -1,1 +1,6 @@
-<p>ark-player-details works!</p>
+<supremegaming-player-details
+  [game]="'ark'"
+  [playerGuid]="playerGuid"
+  [tribeDetailsRoute]="'../../tribes'"
+  [playerDetailsRoute]="'../../survivors'"
+></supremegaming-player-details>
