--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/player-table/player-table.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/player-table/player-table.component.html
@@ -11,9 +11,10 @@
       <td *ngIf="showCount"><span class="character-count">{{i + 1}}.</span></td>
 
       <td class="name-and-avatar" *ngIf="columnsVisible | includes : 'CharacterName'">
-        <span class="character-profile-picture"
-          ><img [src]="player.AvatarUrl" [alt]="player.SteamName" [title]="player.SteamName" /></span
-        ><a [routerLink]="[playerDetailsRoute, player.Guid]" routerLinkActive="router-link-active"
+        <span class="character-profile-picture" *ngIf="showAvatar"
+          ><img [src]="player.AvatarUrl" [alt]="player.SteamName" [title]="player.SteamName"
+        /></span>
+        <a [routerLink]="[playerDetailsRoute, player.Guid]" routerLinkActive="router-link-active"
           >{{player.CharacterName}}</a
         >
       </td>
