Comleted tribe details copmonent
Implemented in ark explorer tribe details module

--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-tribe-details/ark-tribe-details.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-tribe-details/ark-tribe-details.component.html
@@ -1,1 +1,5 @@
-<supremegaming-tribe-details></supremegaming-tribe-details>
+<supremegaming-tribe-details
+  [game]="'ark'"
+  [tribeGuid]="tribeGuid"
+  [playerDetailsRoute]="'../../survivors'"
+></supremegaming-tribe-details>
