Styling changes for list components
Wrapped them inside a styled wire container element to improve consistency

--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/ark-players-and-tribes.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/ark-players-and-tribes.component.html
@@ -1,4 +1,4 @@
-<h1>Player and Tribe Explorer</h1>
+<!-- <h1>Player and Tribe Explorer</h1> -->
 
 <div class="tabs leader-2 trailer-3">
   <div class="tab" [routerLink]="['./']" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}">
