--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/online-player-list/online-player-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/online-player-list/online-player-list.component.html
@@ -1,7 +1,9 @@
-<supremegaming-player-table
-  [data]="players | async"
-  [columnsVisible]="['CharacterName', 'Level', 'TribeName', 'PlayMap']"
-  [columnLabels]="['Survivor Name', 'Level', 'Tribe Name', 'Map']"
-  [playerDetailsRoute]="playerDetailsRoute"
-  [tribeDetailsRoute]="tribeDetailsRoute"
-></supremegaming-player-table>
+<div class="wire-container">
+  <supremegaming-player-table
+    [data]="players | async"
+    [columnsVisible]="['CharacterName', 'Level', 'TribeName', 'PlayMap']"
+    [columnLabels]="['Survivor Name', 'Level', 'Tribe Name', 'Map']"
+    [playerDetailsRoute]="playerDetailsRoute"
+    [tribeDetailsRoute]="tribeDetailsRoute"
+  ></supremegaming-player-table>
+</div>
