--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-search-list/tribe-search-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-search-list/tribe-search-list.component.html
@@ -5,13 +5,15 @@
 </form>
 
 <ng-container *ngIf="(data | async)?.length > 0">
-  <supremegaming-tribe-table
-    [data]="(data | async)"
-    [columnsVisible]="['Name', 'MemberCount', 'PlayMap']"
-    [columnLabels]="['Tribe Name', 'Members', 'Map']"
-    [playerDetailsRoute]="playerDetailsRoute"
-    [tribeDetailsRoute]="tribeDetailsRoute"
-  ></supremegaming-tribe-table>
+  <div class="wire-container">
+    <supremegaming-tribe-table
+      [data]="(data | async)"
+      [columnsVisible]="['Name', 'MemberCount', 'PlayMap']"
+      [columnLabels]="['Tribe Name', 'Members', 'Map']"
+      [playerDetailsRoute]="playerDetailsRoute"
+      [tribeDetailsRoute]="tribeDetailsRoute"
+    ></supremegaming-tribe-table>
+  </div>
 </ng-container>
 
 <div class="search-feedback">
