--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-table/tribe-table.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/tribe-table/tribe-table.component.html
@@ -1,7 +1,7 @@
 <table>
   <thead>
     <tr>
-      <th *ngIf="showCount"></th>
+      <th *ngIf="showCount">#</th>
       <th *ngFor="let title of columnLabels">{{title}}</th>
     </tr>
   </thead>
