--- a/libs/pages/public/src/lib/games/modules/atlas/modules/atlas-players-and-tribes/modules/atlas-online-list/atlas-online-list.component.html
+++ b/libs/pages/public/src/lib/games/modules/atlas/modules/atlas-players-and-tribes/modules/atlas-online-list/atlas-online-list.component.html
@@ -1,1 +1,4 @@
-<p>atlas-online-list works!</p>
+<supremegaming-online-player-list
+  [servers]="servers | async"
+  [playerDetailsRoute]="'./pathfinders'"
+></supremegaming-online-player-list>
