Generalized player and tribe components to re-use in atlas

--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-online-list/ark-online-list.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-online-list/ark-online-list.component.html
@@ -1,5 +1,7 @@
 <supremegaming-online-player-list
   [servers]="servers | async"
+  [columnsVisible]="['CharacterName', 'Level', 'TribeName', 'PlayMap']"
+  [columnLabels]="['Survivor Name', 'Level', 'Tribe Name', 'Map']"
   [playerDetailsRoute]="'./survivors'"
   [tribeDetailsRoute]="'./tribes'"
 ></supremegaming-online-player-list>
