--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-player-details/ark-player-details.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-player-details/ark-player-details.component.html
@@ -1,6 +1,8 @@
 <supremegaming-player-details
   [game]="'ark'"
   [playerGuid]="playerGuid"
+  [columnsVisible]="['CharacterName', 'PlayMap', 'FileUpdated']"
+  [columnLabels]="['Name', 'Map', 'Last Online']"
   [tribeDetailsRoute]="'../../tribes'"
   [playerDetailsRoute]="'../../survivors'"
 ></supremegaming-player-details>
