--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/online-player-list/online-player-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/online-player-list/online-player-list.component.html
@@ -1,8 +1,8 @@
 <div class="wire-container">
   <supremegaming-player-table
     [data]="players | async"
-    [columnsVisible]="['CharacterName', 'Level', 'TribeName', 'PlayMap']"
-    [columnLabels]="['Survivor Name', 'Level', 'Tribe Name', 'Map']"
+    [columnsVisible]="columnsVisible"
+    [columnLabels]="columnLabels"
     [playerDetailsRoute]="playerDetailsRoute"
     [tribeDetailsRoute]="tribeDetailsRoute"
   ></supremegaming-player-table>
