--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/player-details/player-details.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/player-details/player-details.component.html
@@ -47,8 +47,8 @@
     [data]="entities | async"
     [showCount]="false"
     [showAvatar]="false"
-    [columnsVisible]="['CharacterName', 'PlayMap', 'FileUpdated']"
-    [columnLabels]="['Name', 'Map', 'Last Online']"
+    [columnsVisible]="columnsVisible"
+    [columnLabels]="columnLabels"
     [playerDetailsRoute]="playerDetailsRoute"
   ></supremegaming-player-table>
 </div>
