--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/player-search-list/player-search-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/player-search-list/player-search-list.component.html
@@ -4,12 +4,12 @@
   </div>
 </form>
 
-<ng-container *ngIf="(data | async)?.length > 0">
+<ng-container *ngIf="(searchData | async)?.length > 0">
   <div class="wire-container">
     <supremegaming-player-table
-      [data]="(data | async)"
-      [columnsVisible]="['CharacterName', 'Level', 'TribeName', 'PlayMap', 'FileUpdated']"
-      [columnLabels]="['Survivor Name', 'Level', 'Tribe Name', 'Map', 'Last Online']"
+      [data]="(searchData | async)"
+      [columnsVisible]="columnsVisible"
+      [columnLabels]="columnLabels"
       [playerDetailsRoute]="playerDetailsRoute"
       [tribeDetailsRoute]="tribeDetailsRoute"
     ></supremegaming-player-table>
@@ -17,5 +17,5 @@
 </ng-container>
 
 <div class="search-feedback">
-  <p *ngIf="(searchTerm | async)?.length > 0 && (data | async)?.length === 0">There's nothing here Jim...</p>
+  <p *ngIf="(searchTerm | async)?.length > 0 && (searchData | async)?.length === 0">There's nothing here Jim...</p>
 </div>
