Passed in all the inhereted properties down to universal explorer components from the game-specific feature modules

--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-player-details/ark-player-details.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-player-details/ark-player-details.component.html
@@ -1,6 +1,8 @@
 <supremegaming-player-details
   [game]="'ark'"
   [playerGuid]="playerGuid"
+  [showAvatar]="false"
+  [showCount]="false"
   [columnsVisible]="['CharacterName', 'PlayMap', 'FileUpdated']"
   [columnLabels]="['Name', 'Map', 'Last Online']"
   [tribeDetailsRoute]="'../../tribes'"
