--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/player-search-list/player-search-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/player-search-list/player-search-list.component.html
@@ -8,6 +8,8 @@
   <div class="wire-container">
     <supremegaming-player-table
       [data]="(searchData | async)"
+      [showAvatar]="showAvatar"
+      [showCount]="showCount"
       [columnsVisible]="columnsVisible"
       [columnLabels]="columnLabels"
       [playerDetailsRoute]="playerDetailsRoute"
