--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-tribe-details/ark-tribe-details.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-players-and-tribes/modules/ark-tribe-details/ark-tribe-details.component.html
@@ -1,6 +1,7 @@
 <supremegaming-tribe-details
   [game]="'ark'"
   [tribeGuid]="tribeGuid"
+  [showAvatar]="false"
   [columnsVisible]="['CharacterName', 'Level', 'FileUpdated']"
   [columnLabels]="['Name', 'Level', 'Last Online']"
   [playerDetailsRoute]="'../../survivors'"
