--- a/libs/ui/src/lib/modules/player-tribe-explorer/components/online-player-list/online-player-list.component.html
+++ b/libs/ui/src/lib/modules/player-tribe-explorer/components/online-player-list/online-player-list.component.html
@@ -1,6 +1,8 @@
 <div class="wire-container">
   <supremegaming-player-table
     [data]="players | async"
+    [showAvatar]="showAvatar"
+    [showCount]="showCount"
     [columnsVisible]="columnsVisible"
     [columnLabels]="columnLabels"
     [playerDetailsRoute]="playerDetailsRoute"
